--- a/Escape The Darkness/Assembly-CSharp.csproj
+++ b/Escape The Darkness/Assembly-CSharp.csproj
@@ -64,9 +64,9 @@
     <Compile Include="Assets\Scripts\Commented\Health.cs" />
     <Compile Include="Assets\Scripts\Commented\Menus.cs" />
     <Compile Include="Assets\Scripts\Commented\PauseMenu.cs" />
+    <Compile Include="Assets\Scripts\Commented\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Commented\Timer.cs" />
     <Compile Include="Assets\Scripts\Done(Comment)\Ground.cs" />
-    <Compile Include="Assets\Scripts\Done(Comment)\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Done(Comment)\RandomObstacles.cs" />
     <Compile Include="Assets\Scripts\Done(Comment)\Scoring.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
